--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
                 Actively searching for an OJT opportunity to grow as a software developer.
 
             </p>
-
+            <hr class="my-6 border-gray-800 w-3/4 mx-auto">
+            <h2 class="text-center text-l italic mt-4 mb-2">Skills</h2>
+            <ul class="list-disc list-inside ml-5 text-sm">
+                <li>Programming: C++, JavaScript, Python, PHP</li>
+                <li>Web Development: HTML, CSS (Tailwind, Bootstrap) </li>
+                <li>Tools & Platforms: Cisco Packet Tracer, Logisim, Microsoft Office, Canva</li> 
+            </ul>
     
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
 </div>
