--- a/portfolio.html
+++ b/portfolio.html
@@ -179,6 +179,35 @@
                     <a href ="https://www.facebook.com/laconic.riviere/" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center rounded-lg hover:bg-orange-500">Laconic Riviere </a>
                 </div>
 
+                <!-- card 13 -->
+                <div class="card others max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                    <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Logisim projects</h1>
+                        <p class ="font-normal"> Google Drive link to folders that has the following: </p>
+                        <ul class="list-disc list-inside ml-5 text-sm gap-2">
+                            <li>A logisim version of an 8085 microprocessor</li>
+                            <li>Both prelim_exam.circ and video.circ has: 4 bit ALU, 2-1 MUX, Subtraction (without using subtractors), and a 4 bit Adder</li>
+                            <li>The video is explaining how prelim_exam.circ came to be</li>
+                        </ul>
+                        <hr class="my-3 border-gray-800 w-full mx-auto">
+                    <a href ="https://drive.google.com/drive/folders/1nZuscVdqCLJFaOxL9qfUWcCN_dp1U0ox?usp=sharing" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center rounded-lg hover:bg-green-500">Google Drive Folder</a>
+                </div>
+
+                <!-- card 14 -->
+                <div class="card others max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                    <h1 class="mb-3 text-2xl font-semibold tracking-tight"> CISCO Packet Tracer projects</h1>
+                        <p class ="font-normal"> Google Drive link to my CISCO Packet Tracer related projects</p>
+                        <hr class="my-3 border-gray-800 w-full mx-auto">
+                    <a href ="https://drive.google.com/drive/folders/1Y0UrDqsFwIia4pRsJzD4Dfiag6Gqw6ya?usp=sharing" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center rounded-lg hover:bg-green-500">Google Drive Folder</a>
+                </div>
+
+                <!-- card 15 -->
+                <div class="card others max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                    <h1 class="mb-3 text-2xl font-semibold tracking-tight"> General Portfolio</h1>
+                        <p class ="font-normal"> Google Drive link to some items of my portfolio </p>
+                        <hr class="my-3 border-gray-800 w-full mx-auto">
+                    <a href ="https://drive.google.com/drive/folders/1eEFdKY8GRw14zrfpM-5T_0I-O7s-CZuQ?usp=sharing" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center rounded-lg hover:bg-green-500">Google Drive Folder</a>
+                </div>
+
         </div>
     </div>
 
