--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 
             <!-- start of cards -->
             <!-- card 1 -->
-                <div class="card web max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card web max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Sample Website for Siquijor </h1>
                         <p class ="font-normal"> HTML | Bootstrap CSS <br></p>
                     <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -73,7 +73,7 @@
                 </div>
 
                 <!-- card 2  -->
-                <div class="card web max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card web max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Burger Restaurant Website </h1>
                         <p class ="font-normal"> HTML | JavaScript | Tailwind CSS<br> </p>
                     <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -84,7 +84,7 @@
                 </div>
 
                 <!-- card 3  -->
-                <div class="card web max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card web max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Job Application Website </h1>
                         <p class ="font-normal"> HTML | PHP | Basic CSS<br> </p>
                     <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -94,7 +94,7 @@
                 </div>
 
                 <!-- card 4  -->
-                <div class="card web max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card web max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Google Docs Website </h1>
                         <p class ="font-normal"> HTML | JavaScript | PHP | Tailwind CSS<br> </p>
                     <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -104,7 +104,7 @@
                 </div>
 
                 <!-- card 5  -->
-                <div class="card web max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card web max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Resume Website </h1>
                         <p class ="font-normal"> HTML | JavaScript | Tailwind CSS<br> </p>
                     <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -113,7 +113,7 @@
                         <a href ="https://github.com/ysabellakristine2/resume_website" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center rounded-lg hover:bg-blue-500">Repository </a>
                 </div>
             <!-- card 6 -->
-                <div class="card design max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card design max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Straight to the Point Book</h1>
                         <p class ="font-normal"> Canva<br> </p>
                         <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -122,7 +122,7 @@
                 </div>
             
                 <!-- card 7 -->
-                <div class="card design max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card design max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Prevent Teenage Pregnancy promotion materials</h1>
                         <p class ="font-normal"> Canva<br> </p>
                         <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -132,7 +132,7 @@
                 </div>
 
                 <!-- card 8 -->
-                <div class="card design max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card design max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Intercultural Infographic </h1>
                         <p class ="font-normal"> Canva<br> </p>
                         <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -141,7 +141,7 @@
                 </div>
 
                 <!-- card 9 -->
-                <div class="card design max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card design max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Data Visualization Infographic </h1>
                         <p class ="font-normal"> Canva<br> </p>
                         <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -150,7 +150,7 @@
                 </div>
 
                 <!-- card 10 -->
-                <div class="card design max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card design max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Pictorial Essay </h1>
                         <p class ="font-normal"> Canva<br> </p>
                         <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -159,7 +159,7 @@
                 </div>
 
                 <!-- card 11 -->
-                <div class="card design others max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card design others max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Digital Art </h1>
                         <p class ="font-normal"> Pages of Digital Art <br> </p>
                         <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -170,7 +170,7 @@
                 </div>
 
                 <!-- card 12 -->
-                <div class="card others max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card others max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Facebook page links</h1>
                         <p class ="font-normal"> Pages I was involved with<br> </p>
                         <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -180,7 +180,7 @@
                 </div>
 
                 <!-- card 13 -->
-                <div class="card others max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card others max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Logisim projects</h1>
                         <p class ="font-normal"> Google Drive link to folders that has the following: </p>
                         <ul class="list-disc list-inside ml-5 text-sm gap-2">
@@ -193,7 +193,7 @@
                 </div>
 
                 <!-- card 14 -->
-                <div class="card others max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card others max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> CISCO Packet Tracer projects</h1>
                         <p class ="font-normal"> Google Drive link to my CISCO Packet Tracer related projects</p>
                         <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -201,7 +201,7 @@
                 </div>
 
                 <!-- card 15 -->
-                <div class="card others max-w-lg p-6 border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card others max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> General Portfolio</h1>
                         <p class ="font-normal"> Google Drive link to some items of my portfolio </p>
                         <hr class="my-3 border-gray-800 w-full mx-auto">
