--- a/experience.html
+++ b/experience.html
@@ -62,9 +62,7 @@
                 <ul class="list-disc list-inside text-black text-sm space-y-2">
                     <li>Handled daily customer transactions and managed time-tracking systems for PC rentals </li>
                     <li>Provided basic technical support for hardware issues including mouse, keyboard, and monitor replacement</li>
-                    <li>Ensured cleanliness and organization of the shop, promoting a professional and user-friendly environment </li>
-                    <li>Created a collaborative document editing platform using PHP and vanilla JavaScript, simulating key features of Google Docs. </li>
-                    <li> Assisted customers with basic computer operations, printing, scanning, and document formatting</li>
+                    <li>Ensured cleanliness and organization of the shop, promoting a professional and user-friendly environment </li>                    <li> Assisted customers with basic computer operations, printing, scanning, and document formatting</li>
                 </ul>
                 <hr class="my-6 border-gray-800 w-3/4 mx-auto">
                     
