--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
                     <p class ="mb-3 font-normal"> Collection of Digital Artwork </p>
                     <a href ="https://www.tumblr.com/romero-ysabellakristine-b?source=share" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center rounded-lg hover:bg-blue-500 hover:text-white">1st Tumblr </a>
                     <a href ="https://www.tumblr.com/blog/fandom-trash-426" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center rounded-lg hover:bg-blue-600 hover:text-white">2nd Tumblr </a>
-                    <a href ="https://www.tumblr.com/blog/fandom-trash-426" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center rounded-lg hover:bg-purple-500 hover:text-white">Instagram </a>
+                    <a href ="privacy.html" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center rounded-lg hover:bg-purple-500 hover:text-white">Instagram </a>
                 </div>
 
                 <!-- card 12 -->
@@ -227,7 +227,7 @@
             <li>
                 <a href = "https://www.linkedin.com/in/ysabella-kristine-romero-0a472b362/" class="text-gray-800 px-4 py-2 rounded hover:bg-gray-500 hover:text-cyan-200 transition ease-in-out duration-700">LinkedIn</a></li>
             <li>
-                <a href = "https://www.facebook.com/ysabella.kristine.b.romero" class="text-gray-800 px-4 py-2 rounded hover:bg-gray-500 hover:text-cyan-300 transition ease-in-out duration-700">Facebook</a></li>
+                <a href = "privacy.html" class="text-gray-800 px-4 py-2 rounded hover:bg-gray-500 hover:text-cyan-300 transition ease-in-out duration-700">Facebook</a></li>
             <li>
                 <a href = "https://github.com/ysabellakristine" class="text-gray-800 px-4 py-2 rounded hover:bg-gray-500 hover:text-cyan-400 transition ease-in-out duration-700">Github</a></li>
         </ul>
