--- a/experience.html
+++ b/experience.html
@@ -83,7 +83,7 @@
             <li>
                 <a href = "https://www.linkedin.com/in/ysabella-kristine-romero-0a472b362/" class="text-gray-800 px-4 py-2 rounded hover:bg-gray-500 hover:text-cyan-200 transition ease-in-out duration-700">LinkedIn</a></li>
             <li>
-                <a href = "https://www.facebook.com/ysabella.kristine.b.romero" class="text-gray-800 px-4 py-2 rounded hover:bg-gray-500 hover:text-cyan-300 transition ease-in-out duration-700">Facebook</a></li>
+                <a href = "privacy.html" class="text-gray-800 px-4 py-2 rounded hover:bg-gray-500 hover:text-cyan-300 transition ease-in-out duration-700">Facebook</a></li>
             <li>
                 <a href = "https://github.com/ysabellakristine" class="text-gray-800 px-4 py-2 rounded hover:bg-gray-500 hover:text-cyan-400 transition ease-in-out duration-700">Github</a></li>
         </ul>
