--- a/privacy.html
+++ b/privacy.html
@@ -51,12 +51,13 @@
             <!-- my name -->
             <h1 class="text-2xl text-center text-red font-semibold">Privacy Notice!</h1>
 
-            <h2 class="text-center text-l italic mt-4">Due to increasing attempts of fake job offers / phishing attempts being sent to me:</h2>
+            <h2 class="text-center text-l italic mt-4">Due to increasing attempts of fake job offers / phishing attempts:</h2>
             <!-- divider / hr -->
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
             <!-- description -->
             <p class="text-left text-gray-700 mt-2 mx-6">
-                To view my Facebook and Instagram account, please contact me first via email first: ysabellakristineromero@gmail.com
+                To view my Facebook and Instagram account, please contact me first via email first: 
+                <i>ysabellakristineromero@gmail.com</i>
 
             </p>
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
