--- a/privacy.html
+++ b/privacy.html
@@ -51,14 +51,15 @@
             <!-- my name -->
             <h1 class="text-2xl text-center text-red font-semibold">Privacy Notice!</h1>
 
-            <h2 class="text-center text-l italic mt-4">Due to increasing attempts of fake job offers / phishing attempts:</h2>
+            <h2 class="text-center text-l italic mt-4">Due to recent incidents involving phishing and fake job offers:</h2>
             <!-- divider / hr -->
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
             <!-- description -->
             <p class="text-left text-gray-700 mt-2 mx-6">
-                To view my Facebook and Instagram account, please contact me first via email first: 
+                Access to my Facebook and Instagram accounts is restricted for security reasons.
+                If you would like to view these profiles for verification or networking purposes,
+                please contact me directly via email first: 
                 <i>ysabellakristineromero@gmail.com</i>
-
             </p>
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
 </div>
