--- a/privacy.html
+++ b/privacy.html
@@ -56,8 +56,8 @@
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
             <!-- description -->
             <p class="text-left text-gray-700 mt-2 mx-6">
-                Access to my Facebook and Instagram accounts is restricted for security reasons. <br>
-                If you would like to view these profiles for verification or networking purposes, please contact me directly via email first: <br>
+                Access to my Facebook and Instagram accounts is restricted for security reasons. <br><br>
+                If you would like to view these profiles for verification or networking purposes, please contact me directly via email first: <br><br>
                 <i>ysabellakristineromero@gmail.com</i>
             </p>
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
