--- a/privacy.html
+++ b/privacy.html
@@ -49,15 +49,16 @@
             <div class="relative bg-white backdrop-blur-lg shadow-2xl rounded-3xl max-w-md mx-auto mt-40 px-6 pb-8 pt-20">
 
             <!-- my name -->
-            <h1 class="text-2xl text-center text-red font-semibold">Privacy Notice!</h1>
+            <h1 class="text-2xl text-center text-red-600 font-semibold">Privacy Notice!</h1>
 
-            <h2 class="text-center text-l italic mt-4">Due to recent incidents involving phishing and fake job offers:</h2>
             <!-- divider / hr -->
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
+
+            <h2 class="text-center text-l italic mt-4">Due to recent incidents involving phishing and fake job offers:</h2>
             <!-- description -->
             <p class="text-left text-gray-700 mt-2 mx-6">
                 Access to my Facebook and Instagram accounts is restricted for security reasons. <br><br>
-                If you would like to view these profiles for verification or networking purposes, please contact me directly via email first: <br><br>
+                If you would like to view these profiles for verification, portfolio, or networking purposes, please contact me directly via email first: <br><br>
                 <i>ysabellakristineromero@gmail.com</i>
             </p>
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
