--- a/privacy.html
+++ b/privacy.html
@@ -58,8 +58,8 @@
             <!-- description -->
             <p class="text-left text-gray-700 mt-2 mx-6">
                 Access to my Facebook and Instagram accounts is restricted for security reasons. <br><br>
-                If you would like to view these profiles for verification, portfolio, or networking purposes, please contact me directly via email first: <br><br>
-                <i>ysabellakristineromero@gmail.com</i>
+                If you would like to view these profiles for verification, portfolio, or networking purposes, please contact me directly via email first: <br><br></p>
+                <p class="text-center italic"> ysabellakristineromero@gmail.com
             </p>
             <hr class="my-6 border-gray-800 w-3/4 mx-auto">
 </div>
