--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!-- profile Image overlapping on top of card -->
             <div class="absolute -top-16 left-1/2 transform -translate-x-1/2">
                 <div class="w-32 h-32 rounded-full overflow-hidden border-4 border-white">
-                    <img src="images/profile.png" alt="my photo" class="w-full h-full object-cover" />
+                    <img src="images/profile-wm.png" alt="my photo" class="w-full h-full object-cover" />
                 </div>
             </div>
 
