--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 
             <!-- start of cards -->
             <!-- card 1 -->
-                <div class="card web max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card web design max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Sample Website for Siquijor </h1>
                         <p class ="font-normal"> HTML | Bootstrap CSS <br></p>
                     <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -73,7 +73,7 @@
                 </div>
 
                 <!-- card 2  -->
-                <div class="card web max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card web design max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Burger Restaurant Website </h1>
                         <p class ="font-normal"> HTML | JavaScript | Tailwind CSS<br> </p>
                     <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -94,7 +94,7 @@
                 </div>
 
                 <!-- card 4  -->
-                <div class="card web max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card web design max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Google Docs Website </h1>
                         <p class ="font-normal"> HTML | JavaScript | PHP | Tailwind CSS<br> </p>
                     <hr class="my-3 border-gray-800 w-full mx-auto">
@@ -104,7 +104,7 @@
                 </div>
 
                 <!-- card 5  -->
-                <div class="card web max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
+                <div class="card web design max-w-lg p-6 bg-white border border-gray-400 rounded-lg shadow-xl text-black">
                     <h1 class="mb-3 text-2xl font-semibold tracking-tight"> Resume Website </h1>
                         <p class ="font-normal"> HTML | JavaScript | Tailwind CSS<br> </p>
                     <hr class="my-3 border-gray-800 w-full mx-auto">
